# WAtherSM

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.sh  city.list.json  index.html  package-lock.json  package.json  serve.sh  styles.css  wasm.js  wasm_bg.d.ts  weather_wasm.d.ts  weather_wasm.js  weather_wasm_bg.d.ts  weather_wasm_bg.wasm
src/: lib.rs  model.rs  views.rs
src/api/: condition.rs  mod.rs  models.rs  proxy.rs  source.rs  task_manage.rs  weather_api.rs
src/api/locations/: mod.rs  models.rs  storage.rs
src/util/: resources.rs
static/: index.html  styles.css
