[package]
name = "weather"
version = "0.1.0"
authors = ["Yaxin Cheng <yaxin.cheng@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.16"
wasm-bindgen = "0.2"
anyhow = "1.0"
serde = "1.0"
chrono = "0.4.11"
